--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/editTextGattCharacteristicValue"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textViewGattCharacteristicValue"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:accessibilityLiveRegion="none"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/value_for_characteristic"
-        android:inputType="text"
+        android:text="string/pair_the_ble_gatt_server_via_settings"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
