--- a/App/app/src/main/res/layout/activity_main2.xml
+++ b/App/app/src/main/res/layout/activity_main2.xml
@@ -8,6 +8,17 @@
 
 
     <Button
+        android:id="@+id/btnShowLatestUpdate"
+        android:layout_width="146dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="20dp"
+        android:onClick="getLastUpdateTime"
+        android:text="Show Latest Update"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnDisconnect" />
+
+    <Button
         android:id="@+id/btnStartWorker2"
         android:layout_width="170dp"
         android:layout_height="84dp"
@@ -89,8 +100,8 @@
         android:id="@+id/btnDoWork"
         android:layout_width="146dp"
         android:layout_height="75dp"
-        android:layout_marginStart="114dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="151dp"
         android:onClick="doWorkOnce"
         android:text="Do WOrk Once"
